--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,12 +6,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@chakra-ui/react": ["node_modules/@chakra-ui/react"]
     },
 
     /* Bundler mode */
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
@@ -19,6 +20,8 @@
     "jsx": "react-jsx",
 
     /* Linting */
+    "esModuleInterop": true,
+
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
